// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shows all three onboarding panels with usable completion controls in en 1`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "A journal that is yours alone"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
        <path d="M9 11.6l2.1 2.1 4-4.2">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Write daily. Everything you write is encrypted on this device before it leaves — the server stores only opaque ciphertext, forever. Not advice, not diagnosis: observations, each with its evidence."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Step 1 of 3" className="dots" role="img">
        <span className="dots__dot dots__dot--on">
        <span className="dots__dot">
        <span className="dots__dot">
      <span className="note note--muted">
        "Step 1 of 3"
    <button className="btn btn--block" disabled=false type="button">
      "Next""
`;

exports[`shows all three onboarding panels with usable completion controls in en 2`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "Thirty honest days"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Patterns need data. For your first 30 active days you will see your streak and your local mood trend — and nothing else. After the threshold, Fathom surfaces the patterns too slow for a human to notice: weekday themes, day-after links, returning worries."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Step 2 of 3" className="dots" role="img">
        <span className="dots__dot">
        <span className="dots__dot dots__dot--on">
        <span className="dots__dot">
      <span className="note note--muted">
        "Step 2 of 3"
    <button className="btn btn--block" disabled=false type="button">
      "Next""
`;

exports[`shows all three onboarding panels with usable completion controls in en 3`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "You are in control"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Share with a therapist only if you choose (revocable, encrypted end to end). Crisis help is one tap away on every screen, offline. Export or delete everything at any time — deletion is real and immediate."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Step 3 of 3" className="dots" role="img">
        <span className="dots__dot">
        <span className="dots__dot">
        <span className="dots__dot dots__dot--on">
      <span className="note note--muted">
        "Step 3 of 3"
    <button className="btn btn--block" disabled=false type="button">
      "Start journaling""
`;

exports[`shows all three onboarding panels with usable completion controls in es 1`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "Un diario que es solo suyo"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
        <path d="M9 11.6l2.1 2.1 4-4.2">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Escriba a diario. Todo lo que escribe se cifra en este dispositivo antes de salir — el servidor guarda solo texto cifrado opaco, para siempre. No consejos, no diagnósticos: observaciones, cada una con su evidencia."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Paso 1 de 3" className="dots" role="img">
        <span className="dots__dot dots__dot--on">
        <span className="dots__dot">
        <span className="dots__dot">
      <span className="note note--muted">
        "Paso 1 de 3"
    <button className="btn btn--block" disabled=false type="button">
      "Siguiente""
`;

exports[`shows all three onboarding panels with usable completion controls in es 2`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "Treinta días honestos"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Los patrones necesitan datos. Durante sus primeros 30 días con actividad verá su racha y su tendencia local de ánimo — y nada más. Tras el umbral, Fathom revela los patrones demasiado lentos para que una persona los note: temas por día de la semana, vínculos al día siguiente, preocupaciones que vuelven."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Paso 2 de 3" className="dots" role="img">
        <span className="dots__dot">
        <span className="dots__dot dots__dot--on">
        <span className="dots__dot">
      <span className="note note--muted">
        "Paso 2 de 3"
    <button className="btn btn--block" disabled=false type="button">
      "Siguiente""
`;

exports[`shows all three onboarding panels with usable completion controls in es 3`] = `
"<div className="onboard-wrap">
  <section className="card">
    <h2 className="card__title">
      "Usted tiene el control"
    <div aria-hidden="true" className="panel-art">
      <svg aria-hidden="true" fill="none" focusable="false" height=44 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=44>
        <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
    <p className="note note--lead" style={"whiteSpace":"pre-wrap"}>
      "Comparta con un terapeuta solo si lo decide (revocable, cifrado de extremo a extremo). La ayuda en crisis está a un toque en cada pantalla, sin conexión. Exporte o elimine todo en cualquier momento — la eliminación es real e inmediata."
    <div className="row row--wrap" style={"gap":10}>
      <div aria-label="Paso 3 de 3" className="dots" role="img">
        <span className="dots__dot">
        <span className="dots__dot">
        <span className="dots__dot dots__dot--on">
      <span className="note note--muted">
        "Paso 3 de 3"
    <button className="btn btn--block" disabled=false type="button">
      "Empezar a escribir""
`;
